pxc/tests/test_11_foreach/fe_arr5.px

namespace fe_arr5;
import common "";

function void test1(vector{string} const& a)
{
  foreach (size_t i, string mutable s : a) { // error
    s = to_string(i);
  }
  foreach (size_t i, string s : a) {
    println(a[i]);
  }
}

vector{string} a;
a.resize(100);
test1(a);
